# aegis

./: .gitignore  README.md
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  main.rs
crates/cli/tests/: audit_subcommand.rs  init.rs
crates/host/src/: audit.rs  lib.rs  taint.rs  verifier.rs
crates/host/tests/: audit_chain.rs  host.rs  network_timeout.rs  runtime_caps.rs  subprocess_env.rs  taint.rs  verifier.rs
crates/mcp/src/: main.rs
crates/mcp/tests/: tool_routing.rs
crates/policy/src/: lib.rs
crates/policy/tests/: policy.rs
docs/: 02-from-sigil.md  03-architecture.md  04-policy-file.md  06-quickstart.md  07-claude-code.md  09-local-executor.md  10-running-examples.md  AGENT_POLICY_SPEC.md  README.md  SECURITY_THREAT_MODEL.md
examples/local_executor/: rag.py  run_exfil.py  run_multistep.py  run_orchestrated.py
examples/policies/: dev.toml  fastapi_dev.toml  fastapi_prod_readonly.toml  multistep_test.toml  rails_dev.toml
