[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Aegis CLI binary."

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-policy.workspace = true
aegis-host.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
